# Mnemosyne

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MNEMOSYNE_AGENT_LLM_REVIEW_OPTIMIZATION.md  MNEMOSYNE_CLAW_AGENT_REFACTOR_GOAL_PLAN.md  MNEMOSYNE_LARGE_SCALE_DISCOVERY_OPTIMIZATION.md  MNEMOSYNE_MCP_INTEGRATION_REFACTOR_PLAN.md  MNEMOSYNE_PI_AGENT_CLAUDE_CODE_PLAN.md  MNEMOSYNE_REVIEW_FIX_PLAN.md  MNEMOSYNE_SECOND_REVIEW_FIX_PLAN.md  MNEMOSYNE_THIRD_REVIEW_OPTIMIZATION.md  OPTIMIZATION_PLAN.md  PRODUCTION_MCP_ROADMAP.md  README.md  README_CN.md  ROADMAP.md  SECURITY.md  SEMANTIC_SCHOLAR_KNOWCRAN_PLAN.md  TEST_REPORT_2026-05-29.md  TEST_REPORT_v0.4.0.md  claude_desktop_config.example.json  entrypoint.sh  langgraph-multimodal-rag-plan.md  merge_vision_results.py  pyproject.toml  test_vision_api.py  vision_pdf_to_markdown.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  tests.yml
docs/: RELEASE_GUIDE.md  USAGE_GUIDE.md  agent-workflows.md  fulltext-migration-notes.md  fulltext.md  local-wsl-gpu-setup.md  obsidian_multimodal_upgrade.md  pdf-download-sources.md  production-readiness-fix-plan-2026-05-31.md
docs/mcp/: claude-code.mcp.json.example  claude-desktop.config.json.example  codex.config.toml.example  fulltext-tools.md
docs/release/: 1.0.0-checklist.md
docs/superpowers/specs/: 2026-05-29-mcp-optimization-design.md  2026-05-31-mnemosyne-pdf-knowledge-base-plan.md
knowcran/: __init__.py  bibtex.py  cli.py  config.py  discovery.py  embeddings.py  extraction.py  fulltext.py  models.py  notes.py  obsidian.py  pdf_parse.py  reading.py  review.py  security.py  semantic_scholar.py  storage.py  utils.py  workflow.py
knowcran/agents/: __init__.py  audit.py  base.py  bulk_executor.py  claude_code_provider.py  claw_provider.py  deterministic_provider.py  pi_print_json_provider.py  pi_rpc_provider.py  prompts.py  registry.py  schemas.py  subprocess_runner.py
knowcran/llm/: __init__.py  base.py  claw_provider.py  factory.py  fake_provider.py  prompts.py  schemas.py
knowcran/media/: __init__.py  extract.py  linker.py  table_markdown.py
knowcran/paper_fetch/: __init__.py  cache.py  config.py  downloader.py  identifiers.py  pdf_utils.py
knowcran/paper_fetch/sources/: __init__.py  arxiv.py  core.py  crossref.py  direct_url.py  doaj.py  europepmc.py  libgen.py  openalex.py  pmc.py  publishers.py  scihub.py  semantic_scholar.py  (+1 more)
knowcran/parsers/: __init__.py  base.py  chunker.py  mineru.py  pymupdf.py
knowcran/rag/: __init__.py  audit.py  generator.py  graph.py  hydrate.py  prompts.py  retrieval.py  state.py
knowcran/server/: __init__.py  mcp.py  tools.py
knowcran/services/: __init__.py  embedder.py  embedding.py  manager.py  mineru.py
knowcran/vision/: __init__.py  prompts.py  provider.py  router.py
scripts/: install_docker_nvidia.sh  verify-release.ps1  verify-release.sh
tests/: conftest.py  test_agent_schemas.py  test_bibtex_obsidian.py  test_bulk_executor.py  test_cache.py  test_citation_keys.py  test_dedup.py  test_discovery.py  test_e2e_pipeline.py  test_encoding.py  test_extraction.py  test_fulltext.py  test_fulltext_hybrid_mcp.py  test_integration.py  test_integration_fulltext.py  test_llm_provider.py  test_llm_schemas.py  test_low_memory_retrieval.py  test_mcp_server.py  test_media_extraction.py  test_media_linker.py  test_mvp_flow.py  test_obsidian.py  test_pdf_fetch.py  test_pdf_utils.py  test_pi_print_json_provider.py  test_project_metadata.py  test_rag_langgraph.py  test_reading.py  test_review.py  test_review_v2.py  test_s2_client.py  test_security.py  test_services.py  test_storage.py  test_storage_v2.py  test_topic_resolution.py  test_vision_provider.py
tests/fixtures/: biomedical_papers.json  s2_paper_detail.json  s2_recommendations.json  s2_search_response.json
