[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "knowcran"
version = "0.3.0"
description = "Local scientific discovery knowledge base using Semantic Scholar"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
knowcran = "knowcran.cli:app"
mnemosyne = "knowcran.cli:app"

[tool.setuptools.packages.find]
include = ["knowcran*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
