[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "knowcran"
version = "1.0.0"
description = "Production-ready local scientific evidence knowledge base and MCP server"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "mcp>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://github.com/shaoleishen/Mnemosyne"
Repository = "https://github.com/shaoleishen/Mnemosyne"
Issues = "https://github.com/shaoleishen/Mnemosyne/issues"

[project.scripts]
knowcran = "knowcran.cli:app"
mnemosyne = "knowcran.cli:app"

[tool.setuptools.packages.find]
include = ["knowcran*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
